parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PROGRAM ID SEMICOLON uses_section block DOT
Rule 2     uses_section -> USES uses_id_list SEMICOLON
Rule 3     uses_section -> empty
Rule 4     uses_id_list -> uses_id_list COMMA ID
Rule 5     uses_id_list -> ID
Rule 6     block -> block_decl_list compound_stmt
Rule 7     block_decl_list -> block_decl_list block_decl
Rule 8     block_decl_list -> empty
Rule 9     block_decl -> label_section
Rule 10    block_decl -> const_section
Rule 11    block_decl -> type_section
Rule 12    block_decl -> var_section
Rule 13    block_decl -> subprogram_declaration
Rule 14    subprogram_block -> block_decl_list compound_stmt
Rule 15    label_section -> LABEL label_id_list SEMICOLON
Rule 16    label_id_list -> label_id_list COMMA ID
Rule 17    label_id_list -> ID
Rule 18    const_section -> CONST const_declaration_list
Rule 19    const_declaration_list -> const_declaration_list const_declaration
Rule 20    const_declaration_list -> const_declaration
Rule 21    const_declaration -> ID EQ const_expr SEMICOLON
Rule 22    const_expr -> literal
Rule 23    const_expr -> MINUS literal
Rule 24    const_expr -> PLUS literal
Rule 25    const_expr -> ID
Rule 26    type_section -> TYPE type_declaration_list
Rule 27    type_declaration_list -> type_declaration_list type_declaration
Rule 28    type_declaration_list -> type_declaration
Rule 29    type_declaration -> ID EQ type_def SEMICOLON
Rule 30    type_def -> type_specifier
Rule 31    type_def -> ARRAY LBRACKET range_list RBRACKET OF type_def
Rule 32    type_def -> RECORD field_list END
Rule 33    type_def -> RECORD END
Rule 34    type_def -> CARET ID
Rule 35    type_def -> CARET INTEGER_TYPE
Rule 36    type_def -> CARET REAL_TYPE
Rule 37    type_def -> CARET BOOLEAN_TYPE
Rule 38    type_def -> CARET CHAR_TYPE
Rule 39    type_def -> CARET STRING_TYPE
Rule 40    type_def -> CARET LONGINT_TYPE
Rule 41    type_def -> CARET SHORTINT_TYPE
Rule 42    type_def -> CARET BYTE_TYPE
Rule 43    type_def -> CARET WORD_TYPE
Rule 44    type_def -> CARET INT64_TYPE
Rule 45    type_def -> CARET SINGLE_TYPE
Rule 46    type_def -> CARET DOUBLE_TYPE
Rule 47    type_def -> CARET EXTENDED_TYPE
Rule 48    type_def -> CARET LONGREAL_TYPE
Rule 49    type_def -> CARET TEXT_TYPE
Rule 50    type_def -> CARET CARDINAL_TYPE
Rule 51    type_def -> CARET QWORD_TYPE
Rule 52    type_def -> LPAREN id_list RPAREN
Rule 53    type_def -> const_expr DOTDOT const_expr
Rule 54    range_list -> range_list COMMA range
Rule 55    range_list -> range
Rule 56    range -> const_expr DOTDOT const_expr
Rule 57    field_list -> field_list field_declaration
Rule 58    field_list -> field_declaration
Rule 59    field_declaration -> id_list COLON type_def SEMICOLON
Rule 60    type_specifier -> INTEGER_TYPE
Rule 61    type_specifier -> REAL_TYPE
Rule 62    type_specifier -> BOOLEAN_TYPE
Rule 63    type_specifier -> CHAR_TYPE
Rule 64    type_specifier -> STRING_TYPE
Rule 65    type_specifier -> LONGINT_TYPE
Rule 66    type_specifier -> SHORTINT_TYPE
Rule 67    type_specifier -> BYTE_TYPE
Rule 68    type_specifier -> WORD_TYPE
Rule 69    type_specifier -> INT64_TYPE
Rule 70    type_specifier -> SINGLE_TYPE
Rule 71    type_specifier -> DOUBLE_TYPE
Rule 72    type_specifier -> EXTENDED_TYPE
Rule 73    type_specifier -> LONGREAL_TYPE
Rule 74    type_specifier -> TEXT_TYPE
Rule 75    type_specifier -> CARDINAL_TYPE
Rule 76    type_specifier -> QWORD_TYPE
Rule 77    type_specifier -> POINTER_TYPE
Rule 78    type_specifier -> PCHAR_TYPE
Rule 79    type_specifier -> ANSISTRING_TYPE
Rule 80    type_specifier -> WIDESTRING_TYPE
Rule 81    type_specifier -> VARIANT_TYPE
Rule 82    type_specifier -> STRING_TYPE LBRACKET INTEGER RBRACKET
Rule 83    type_specifier -> ID
Rule 84    var_section -> VAR var_declaration_list
Rule 85    var_declaration_list -> var_declaration_list var_declaration
Rule 86    var_declaration_list -> var_declaration
Rule 87    var_declaration -> id_list COLON type_def SEMICOLON
Rule 88    id_list -> id_list COMMA ID
Rule 89    id_list -> ID
Rule 90    subprogram_declaration -> procedure_declaration
Rule 91    subprogram_declaration -> function_declaration
Rule 92    procedure_declaration -> PROCEDURE ID LPAREN param_list RPAREN SEMICOLON proc_body SEMICOLON
Rule 93    procedure_declaration -> PROCEDURE ID SEMICOLON proc_body SEMICOLON
Rule 94    proc_body -> subprogram_block
Rule 95    proc_body -> FORWARD
Rule 96    function_declaration -> FUNCTION ID LPAREN param_list RPAREN COLON type_specifier SEMICOLON func_body SEMICOLON
Rule 97    function_declaration -> FUNCTION ID COLON type_specifier SEMICOLON func_body SEMICOLON
Rule 98    func_body -> subprogram_block
Rule 99    func_body -> FORWARD
Rule 100   param_list -> param_list SEMICOLON param_group
Rule 101   param_list -> param_group
Rule 102   param_list -> empty
Rule 103   param_group -> id_list COLON type_specifier
Rule 104   param_group -> VAR id_list COLON type_specifier
Rule 105   param_group -> CONST id_list COLON type_specifier
Rule 106   compound_stmt -> BEGIN statement_list END
Rule 107   statement_list -> statement_list SEMICOLON statement
Rule 108   statement_list -> statement
Rule 109   statement_list -> statement_list error statement
Rule 110   statement -> assignment_stmt
Rule 111   statement -> compound_stmt
Rule 112   statement -> if_stmt
Rule 113   statement -> while_stmt
Rule 114   statement -> for_stmt
Rule 115   statement -> repeat_stmt
Rule 116   statement -> case_stmt
Rule 117   statement -> with_stmt
Rule 118   statement -> goto_stmt
Rule 119   statement -> labeled_stmt
Rule 120   statement -> write_stmt
Rule 121   statement -> writeln_stmt
Rule 122   statement -> read_stmt
Rule 123   statement -> readln_stmt
Rule 124   statement -> break_stmt
Rule 125   statement -> continue_stmt
Rule 126   statement -> exit_stmt
Rule 127   statement -> call_stmt
Rule 128   statement -> empty
Rule 129   assignment_stmt -> variable ASSIGN expression
Rule 130   if_stmt -> IF expression THEN statement ELSE statement
Rule 131   if_stmt -> IF expression THEN statement
Rule 132   while_stmt -> WHILE expression DO statement
Rule 133   for_stmt -> FOR ID ASSIGN expression TO expression DO statement
Rule 134   for_stmt -> FOR ID ASSIGN expression DOWNTO expression DO statement
Rule 135   repeat_stmt -> REPEAT statement_list UNTIL expression
Rule 136   case_stmt -> CASE expression OF case_list END
Rule 137   case_stmt -> CASE expression OF case_list OTHERWISE statement SEMICOLON END
Rule 138   case_stmt -> CASE expression OF case_list ELSE statement SEMICOLON END
Rule 139   case_list -> case_list case_element
Rule 140   case_list -> case_element
Rule 141   case_element -> case_label_list COLON statement SEMICOLON
Rule 142   case_label_list -> case_label_list COMMA case_label
Rule 143   case_label_list -> case_label
Rule 144   case_label -> const_expr
Rule 145   case_label -> const_expr DOTDOT const_expr
Rule 146   with_stmt -> WITH variable_list DO statement
Rule 147   goto_stmt -> GOTO ID
Rule 148   labeled_stmt -> ID COLON statement
Rule 149   write_stmt -> WRITE LPAREN arg_list RPAREN
Rule 150   write_stmt -> WRITE LPAREN RPAREN
Rule 151   writeln_stmt -> WRITELN LPAREN arg_list RPAREN
Rule 152   writeln_stmt -> WRITELN LPAREN RPAREN
Rule 153   writeln_stmt -> WRITELN
Rule 154   read_stmt -> READ LPAREN variable_list RPAREN
Rule 155   read_stmt -> READ LPAREN RPAREN
Rule 156   readln_stmt -> READLN LPAREN variable_list RPAREN
Rule 157   readln_stmt -> READLN LPAREN RPAREN
Rule 158   readln_stmt -> READLN
Rule 159   break_stmt -> BREAK
Rule 160   continue_stmt -> CONTINUE
Rule 161   exit_stmt -> EXIT
Rule 162   exit_stmt -> EXIT LPAREN expression RPAREN
Rule 163   call_stmt -> ID LPAREN func_arg_list RPAREN
Rule 164   call_stmt -> ID LPAREN RPAREN
Rule 165   call_stmt -> ID
Rule 166   variable_list -> variable_list COMMA variable
Rule 167   variable_list -> variable
Rule 168   arg_list -> arg_list COMMA arg_item
Rule 169   arg_list -> arg_item
Rule 170   arg_item -> expression
Rule 171   arg_item -> expression COLON expression
Rule 172   arg_item -> expression COLON expression COLON expression
Rule 173   func_arg_list -> func_arg_list COMMA expression
Rule 174   func_arg_list -> expression
Rule 175   func_arg_list -> empty
Rule 176   expression -> simple_expression relop simple_expression
Rule 177   expression -> simple_expression IN set_literal
Rule 178   expression -> simple_expression
Rule 179   relop -> EQ
Rule 180   relop -> NEQ
Rule 181   relop -> LT
Rule 182   relop -> LE
Rule 183   relop -> GT
Rule 184   relop -> GE
Rule 185   simple_expression -> simple_expression addop term
Rule 186   simple_expression -> simple_expression OR term
Rule 187   simple_expression -> simple_expression XOR term
Rule 188   simple_expression -> term
Rule 189   simple_expression -> addop term
Rule 190   addop -> PLUS
Rule 191   addop -> MINUS
Rule 192   term -> term mulop factor
Rule 193   term -> term AND factor
Rule 194   term -> term SHL factor
Rule 195   term -> term SHR factor
Rule 196   term -> factor
Rule 197   mulop -> TIMES
Rule 198   mulop -> DIVIDE
Rule 199   mulop -> DIV
Rule 200   mulop -> MOD
Rule 201   factor -> LPAREN expression RPAREN
Rule 202   factor -> variable
Rule 203   factor -> ID LPAREN func_arg_list RPAREN
Rule 204   factor -> ID LPAREN RPAREN
Rule 205   factor -> literal
Rule 206   factor -> NOT factor
Rule 207   factor -> NIL
Rule 208   factor -> AT variable
Rule 209   factor -> factor CARET
Rule 210   factor -> set_literal
Rule 211   set_literal -> LBRACKET RBRACKET
Rule 212   set_literal -> LBRACKET set_element_list RBRACKET
Rule 213   set_element_list -> set_element_list COMMA set_element
Rule 214   set_element_list -> set_element
Rule 215   set_element -> expression
Rule 216   set_element -> expression DOTDOT expression
Rule 217   variable -> ID
Rule 218   variable -> variable LBRACKET expression_list RBRACKET
Rule 219   variable -> variable DOT ID
Rule 220   expression_list -> expression_list COMMA expression
Rule 221   expression_list -> expression
Rule 222   literal -> INTEGER
Rule 223   literal -> REAL
Rule 224   literal -> STRING
Rule 225   literal -> CHAR
Rule 226   literal -> TRUE
Rule 227   literal -> FALSE
Rule 228   empty -> <empty>

Terminals, with rules where they appear

AND                  : 193
ANSISTRING_TYPE      : 79
ARRAY                : 31
ASSIGN               : 129 133 134
AT                   : 208
BEGIN                : 106
BOOLEAN_TYPE         : 37 62
BREAK                : 159
BYTE_TYPE            : 42 67
CARDINAL_TYPE        : 50 75
CARET                : 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 209
CASE                 : 136 137 138
CHAR                 : 225
CHAR_TYPE            : 38 63
COLON                : 59 87 96 97 103 104 105 141 148 171 172 172
COMMA                : 4 16 54 88 142 166 168 173 213 220
CONST                : 18 105
CONTINUE             : 160
DIV                  : 199
DIVIDE               : 198
DO                   : 132 133 134 146
DOT                  : 1 219
DOTDOT               : 53 56 145 216
DOUBLE_TYPE          : 46 71
DOWNTO               : 134
ELSE                 : 130 138
END                  : 32 33 106 136 137 138
EQ                   : 21 29 179
EXIT                 : 161 162
EXTENDED_TYPE        : 47 72
FALSE                : 227
FOR                  : 133 134
FORWARD              : 95 99
FUNCTION             : 96 97
GE                   : 184
GOTO                 : 147
GT                   : 183
ID                   : 1 4 5 16 17 21 25 29 34 83 88 89 92 93 96 97 133 134 147 148 163 164 165 203 204 217 219
IF                   : 130 131
IN                   : 177
INT64_TYPE           : 44 69
INTEGER              : 82 222
INTEGER_TYPE         : 35 60
LABEL                : 15
LBRACKET             : 31 82 211 212 218
LE                   : 182
LONGINT_TYPE         : 40 65
LONGREAL_TYPE        : 48 73
LPAREN               : 52 92 96 149 150 151 152 154 155 156 157 162 163 164 201 203 204
LT                   : 181
MINUS                : 23 191
MOD                  : 200
NEQ                  : 180
NIL                  : 207
NOT                  : 206
OF                   : 31 136 137 138
OR                   : 186
OTHERWISE            : 137
PCHAR_TYPE           : 78
PLUS                 : 24 190
POINTER_TYPE         : 77
PROCEDURE            : 92 93
PROGRAM              : 1
QWORD_TYPE           : 51 76
RBRACKET             : 31 82 211 212 218
READ                 : 154 155
READLN               : 156 157 158
REAL                 : 223
REAL_TYPE            : 36 61
RECORD               : 32 33
REPEAT               : 135
RPAREN               : 52 92 96 149 150 151 152 154 155 156 157 162 163 164 201 203 204
SEMICOLON            : 1 2 15 21 29 59 87 92 92 93 93 96 96 97 97 100 107 137 138 141
SHL                  : 194
SHORTINT_TYPE        : 41 66
SHR                  : 195
SINGLE_TYPE          : 45 70
STRING               : 224
STRING_TYPE          : 39 64 82
TEXT_TYPE            : 49 74
THEN                 : 130 131
TIMES                : 197
TO                   : 133
TRUE                 : 226
TYPE                 : 26
UNTIL                : 135
USES                 : 2
VAR                  : 84 104
VARIANT_TYPE         : 81
WHILE                : 132
WIDESTRING_TYPE      : 80
WITH                 : 146
WORD_TYPE            : 43 68
WRITE                : 149 150
WRITELN              : 151 152 153
XOR                  : 187
error                : 109

Nonterminals, with rules where they appear

addop                : 185 189
arg_item             : 168 169
arg_list             : 149 151 168
assignment_stmt      : 110
block                : 1
block_decl           : 7
block_decl_list      : 6 7 14
break_stmt           : 124
call_stmt            : 127
case_element         : 139 140
case_label           : 142 143
case_label_list      : 141 142
case_list            : 136 137 138 139
case_stmt            : 116
compound_stmt        : 6 14 111
const_declaration    : 19 20
const_declaration_list : 18 19
const_expr           : 21 53 53 56 56 144 145 145
const_section        : 10
continue_stmt        : 125
empty                : 3 8 102 128 175
exit_stmt            : 126
expression           : 129 130 131 132 133 133 134 134 135 136 137 138 162 170 171 171 172 172 172 173 174 201 215 216 216 220 221
expression_list      : 218 220
factor               : 192 193 194 195 196 206 209
field_declaration    : 57 58
field_list           : 32 57
for_stmt             : 114
func_arg_list        : 163 173 203
func_body            : 96 97
function_declaration : 91
goto_stmt            : 118
id_list              : 52 59 87 88 103 104 105
if_stmt              : 112
label_id_list        : 15 16
label_section        : 9
labeled_stmt         : 119
literal              : 22 23 24 205
mulop                : 192
param_group          : 100 101
param_list           : 92 96 100
proc_body            : 92 93
procedure_declaration : 90
program              : 0
range                : 54 55
range_list           : 31 54
read_stmt            : 122
readln_stmt          : 123
relop                : 176
repeat_stmt          : 115
set_element          : 213 214
set_element_list     : 212 213
set_literal          : 177 210
simple_expression    : 176 176 177 178 185 186 187
statement            : 107 108 109 130 130 131 132 133 134 137 138 141 146 148
statement_list       : 106 107 109 135
subprogram_block     : 94 98
subprogram_declaration : 13
term                 : 185 186 187 188 189 192 193 194 195
type_declaration     : 27 28
type_declaration_list : 26 27
type_def             : 29 31 59 87
type_section         : 11
type_specifier       : 30 96 97 103 104 105
uses_id_list         : 2 4
uses_section         : 1
var_declaration      : 85 86
var_declaration_list : 84 85
var_section          : 12
variable             : 129 166 167 202 208 218 219
variable_list        : 146 154 156 166
while_stmt           : 113
with_stmt            : 117
write_stmt           : 120
writeln_stmt         : 121

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PROGRAM ID SEMICOLON uses_section block DOT

    PROGRAM         shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PROGRAM . ID SEMICOLON uses_section block DOT

    ID              shift and go to state 3


state 3

    (1) program -> PROGRAM ID . SEMICOLON uses_section block DOT

    SEMICOLON       shift and go to state 4


state 4

    (1) program -> PROGRAM ID SEMICOLON . uses_section block DOT
    (2) uses_section -> . USES uses_id_list SEMICOLON
    (3) uses_section -> . empty
    (228) empty -> .

    USES            shift and go to state 6
    BEGIN           reduce using rule 228 (empty -> .)
    LABEL           reduce using rule 228 (empty -> .)
    CONST           reduce using rule 228 (empty -> .)
    TYPE            reduce using rule 228 (empty -> .)
    VAR             reduce using rule 228 (empty -> .)
    PROCEDURE       reduce using rule 228 (empty -> .)
    FUNCTION        reduce using rule 228 (empty -> .)

    uses_section                   shift and go to state 5
    empty                          shift and go to state 7

state 5

    (1) program -> PROGRAM ID SEMICOLON uses_section . block DOT
    (6) block -> . block_decl_list compound_stmt
    (7) block_decl_list -> . block_decl_list block_decl
    (8) block_decl_list -> . empty
    (228) empty -> .

    BEGIN           reduce using rule 228 (empty -> .)
    LABEL           reduce using rule 228 (empty -> .)
    CONST           reduce using rule 228 (empty -> .)
    TYPE            reduce using rule 228 (empty -> .)
    VAR             reduce using rule 228 (empty -> .)
    PROCEDURE       reduce using rule 228 (empty -> .)
    FUNCTION        reduce using rule 228 (empty -> .)

    block                          shift and go to state 8
    block_decl_list                shift and go to state 9
    empty                          shift and go to state 10

state 6

    (2) uses_section -> USES . uses_id_list SEMICOLON
    (4) uses_id_list -> . uses_id_list COMMA ID
    (5) uses_id_list -> . ID

    ID              shift and go to state 12

    uses_id_list                   shift and go to state 11

state 7

    (3) uses_section -> empty .

    BEGIN           reduce using rule 3 (uses_section -> empty .)
    LABEL           reduce using rule 3 (uses_section -> empty .)
    CONST           reduce using rule 3 (uses_section -> empty .)
    TYPE            reduce using rule 3 (uses_section -> empty .)
    VAR             reduce using rule 3 (uses_section -> empty .)
    PROCEDURE       reduce using rule 3 (uses_section -> empty .)
    FUNCTION        reduce using rule 3 (uses_section -> empty .)


state 8

    (1) program -> PROGRAM ID SEMICOLON uses_section block . DOT

    DOT             shift and go to state 13


state 9

    (6) block -> block_decl_list . compound_stmt
    (7) block_decl_list -> block_decl_list . block_decl
    (106) compound_stmt -> . BEGIN statement_list END
    (9) block_decl -> . label_section
    (10) block_decl -> . const_section
    (11) block_decl -> . type_section
    (12) block_decl -> . var_section
    (13) block_decl -> . subprogram_declaration
    (15) label_section -> . LABEL label_id_list SEMICOLON
    (18) const_section -> . CONST const_declaration_list
    (26) type_section -> . TYPE type_declaration_list
    (84) var_section -> . VAR var_declaration_list
    (90) subprogram_declaration -> . procedure_declaration
    (91) subprogram_declaration -> . function_declaration
    (92) procedure_declaration -> . PROCEDURE ID LPAREN param_list RPAREN SEMICOLON proc_body SEMICOLON
    (93) procedure_declaration -> . PROCEDURE ID SEMICOLON proc_body SEMICOLON
    (96) function_declaration -> . FUNCTION ID LPAREN param_list RPAREN COLON type_specifier SEMICOLON func_body SEMICOLON
    (97) function_declaration -> . FUNCTION ID COLON type_specifier SEMICOLON func_body SEMICOLON

    BEGIN           shift and go to state 16
    LABEL           shift and go to state 22
    CONST           shift and go to state 23
    TYPE            shift and go to state 24
    VAR             shift and go to state 25
    PROCEDURE       shift and go to state 28
    FUNCTION        shift and go to state 29

    compound_stmt                  shift and go to state 14
    block_decl                     shift and go to state 15
    label_section                  shift and go to state 17
    const_section                  shift and go to state 18
    type_section                   shift and go to state 19
    var_section                    shift and go to state 20
    subprogram_declaration         shift and go to state 21
    procedure_declaration          shift and go to state 26
    function_declaration           shift and go to state 27

state 10

    (8) block_decl_list -> empty .

    BEGIN           reduce using rule 8 (block_decl_list -> empty .)
    LABEL           reduce using rule 8 (block_decl_list -> empty .)
    CONST           reduce using rule 8 (block_decl_list -> empty .)
    TYPE            reduce using rule 8 (block_decl_list -> empty .)
    VAR             reduce using rule 8 (block_decl_list -> empty .)
    PROCEDURE       reduce using rule 8 (block_decl_list -> empty .)
    FUNCTION        reduce using rule 8 (block_decl_list -> empty .)


state 11

    (2) uses_section -> USES uses_id_list . SEMICOLON
    (4) uses_id_list -> uses_id_list . COMMA ID

    SEMICOLON       shift and go to state 30
    COMMA           shift and go to state 31


state 12

    (5) uses_id_list -> ID .

    SEMICOLON       reduce using rule 5 (uses_id_list -> ID .)
    COMMA           reduce using rule 5 (uses_id_list -> ID .)


state 13

    (1) program -> PROGRAM ID SEMICOLON uses_section block DOT .

    $end            reduce using rule 1 (program -> PROGRAM ID SEMICOLON uses_section block DOT .)


state 14

    (6) block -> block_decl_list compound_stmt .

    DOT             reduce using rule 6 (block -> block_decl_list compound_stmt .)


state 15

    (7) block_decl_list -> block_decl_list block_decl .

    BEGIN           reduce using rule 7 (block_decl_list -> block_decl_list block_decl .)
    LABEL           reduce using rule 7 (block_decl_list -> block_decl_list block_decl .)
    CONST           reduce using rule 7 (block_decl_list -> block_decl_list block_decl .)
    TYPE            reduce using rule 7 (block_decl_list -> block_decl_list block_decl .)
    VAR             reduce using rule 7 (block_decl_list -> block_decl_list block_decl .)
    PROCEDURE       reduce using rule 7 (block_decl_list -> block_decl_list block_decl .)
    FUNCTION        reduce using rule 7 (block_decl_list -> block_decl_list block_decl .)


state 16

    (106) compound_stmt -> BEGIN . statement_list END
    (107) statement_list -> . statement_list SEMICOLON statement
    (108) statement_list -> . statement
    (109) statement_list -> . statement_list error statement
    (110) statement -> . assignment_stmt
    (111) statement -> . compound_stmt
    (112) statement -> . if_stmt
    (113) statement -> . while_stmt
    (114) statement -> . for_stmt
    (115) statement -> . repeat_stmt
    (116) statement -> . case_stmt
    (117) statement -> . with_stmt
    (118) statement -> . goto_stmt
    (119) statement -> . labeled_stmt
    (120) statement -> . write_stmt
    (121) statement -> . writeln_stmt
    (122) statement -> . read_stmt
    (123) statement -> . readln_stmt
    (124) statement -> . break_stmt
    (125) statement -> . continue_stmt
    (126) statement -> . exit_stmt
    (127) statement -> . call_stmt
    (128) statement -> . empty
    (129) assignment_stmt -> . variable ASSIGN expression
    (106) compound_stmt -> . BEGIN statement_list END
    (130) if_stmt -> . IF expression THEN statement ELSE statement
    (131) if_stmt -> . IF expression THEN statement
    (132) while_stmt -> . WHILE expression DO statement
    (133) for_stmt -> . FOR ID ASSIGN expression TO expression DO statement
    (134) for_stmt -> . FOR ID ASSIGN expression DOWNTO expression DO statement
    (135) repeat_stmt -> . REPEAT statement_list UNTIL expression
    (136) case_stmt -> . CASE expression OF case_list END
    (137) case_stmt -> . CASE expression OF case_list OTHERWISE statement SEMICOLON END
    (138) case_stmt -> . CASE expression OF case_list ELSE statement SEMICOLON END
    (146) with_stmt -> . WITH variable_list DO statement
    (147) goto_stmt -> . GOTO ID
    (148) labeled_stmt -> . ID COLON statement
    (149) write_stmt -> . WRITE LPAREN arg_list RPAREN
    (150) write_stmt -> . WRITE LPAREN RPAREN
    (151) writeln_stmt -> . WRITELN LPAREN arg_list RPAREN
    (152) writeln_stmt -> . WRITELN LPAREN RPAREN
    (153) writeln_stmt -> . WRITELN
    (154) read_stmt -> . READ LPAREN variable_list RPAREN
    (155) read_stmt -> . READ LPAREN RPAREN
    (156) readln_stmt -> . READLN LPAREN variable_list RPAREN
    (157) readln_stmt -> . READLN LPAREN RPAREN
    (158) readln_stmt -> . READLN
    (159) break_stmt -> . BREAK
    (160) continue_stmt -> . CONTINUE
    (161) exit_stmt -> . EXIT
    (162) exit_stmt -> . EXIT LPAREN expression RPAREN
    (163) call_stmt -> . ID LPAREN func_arg_list RPAREN
    (164) call_stmt -> . ID LPAREN RPAREN
    (165) call_stmt -> . ID
    (228) empty -> .
    (217) variable -> . ID
    (218) variable -> . variable LBRACKET expression_list RBRACKET
    (219) variable -> . variable DOT ID

    BEGIN           shift and go to state 16
    IF              shift and go to state 54
    WHILE           shift and go to state 55
    FOR             shift and go to state 56
    REPEAT          shift and go to state 58
    CASE            shift and go to state 59
    WITH            shift and go to state 60
    GOTO            shift and go to state 61
    ID              shift and go to state 57
    WRITE           shift and go to state 62
    WRITELN         shift and go to state 63
    READ            shift and go to state 64
    READLN          shift and go to state 65
    BREAK           shift and go to state 66
    CONTINUE        shift and go to state 67
    EXIT            shift and go to state 68
    END             reduce using rule 228 (empty -> .)
    SEMICOLON       reduce using rule 228 (empty -> .)
    error           reduce using rule 228 (empty -> .)

    statement_list                 shift and go to state 32
    statement                      shift and go to state 33
    assignment_stmt                shift and go to state 34
    compound_stmt                  shift and go to state 35
    if_stmt                        shift and go to state 36
    while_stmt                     shift and go to state 37
    for_stmt                       shift and go to state 38
    repeat_stmt                    shift and go to state 39
    case_stmt                      shift and go to state 40
    with_stmt                      shift and go to state 41
    goto_stmt                      shift and go to state 42
    labeled_stmt                   shift and go to state 43
    write_stmt                     shift and go to state 44
    writeln_stmt                   shift and go to state 45
    read_stmt                      shift and go to state 46
    readln_stmt                    shift and go to state 47
    break_stmt                     shift and go to state 48
    continue_stmt                  shift and go to state 49
    exit_stmt                      shift and go to state 50
    call_stmt                      shift and go to state 51
    empty                          shift and go to state 52
    variable                       shift and go to state 53

state 17

    (9) block_decl -> label_section .

    BEGIN           reduce using rule 9 (block_decl -> label_section .)
    LABEL           reduce using rule 9 (block_decl -> label_section .)
    CONST           reduce using rule 9 (block_decl -> label_section .)
    TYPE            reduce using rule 9 (block_decl -> label_section .)
    VAR             reduce using rule 9 (block_decl -> label_section .)
    PROCEDURE       reduce using rule 9 (block_decl -> label_section .)
    FUNCTION        reduce using rule 9 (block_decl -> label_section .)


state 18

    (10) block_decl -> const_section .

    BEGIN           reduce using rule 10 (block_decl -> const_section .)
    LABEL           reduce using rule 10 (block_decl -> const_section .)
    CONST           reduce using rule 10 (block_decl -> const_section .)
    TYPE            reduce using rule 10 (block_decl -> const_section .)
    VAR             reduce using rule 10 (block_decl -> const_section .)
    PROCEDURE       reduce using rule 10 (block_decl -> const_section .)
    FUNCTION        reduce using rule 10 (block_decl -> const_section .)


state 19

    (11) block_decl -> type_section .

    BEGIN           reduce using rule 11 (block_decl -> type_section .)
    LABEL           reduce using rule 11 (block_decl -> type_section .)
    CONST           reduce using rule 11 (block_decl -> type_section .)
    TYPE            reduce using rule 11 (block_decl -> type_section .)
    VAR             reduce using rule 11 (block_decl -> type_section .)
    PROCEDURE       reduce using rule 11 (block_decl -> type_section .)
    FUNCTION        reduce using rule 11 (block_decl -> type_section .)


state 20

    (12) block_decl -> var_section .

    BEGIN           reduce using rule 12 (block_decl -> var_section .)
    LABEL           reduce using rule 12 (block_decl -> var_section .)
    CONST           reduce using rule 12 (block_decl -> var_section .)
    TYPE            reduce using rule 12 (block_decl -> var_section .)
    VAR             reduce using rule 12 (block_decl -> var_section .)
    PROCEDURE       reduce using rule 12 (block_decl -> var_section .)
    FUNCTION        reduce using rule 12 (block_decl -> var_section .)


state 21

    (13) block_decl -> subprogram_declaration .

    BEGIN           reduce using rule 13 (block_decl -> subprogram_declaration .)
    LABEL           reduce using rule 13 (block_decl -> subprogram_declaration .)
    CONST           reduce using rule 13 (block_decl -> subprogram_declaration .)
    TYPE            reduce using rule 13 (block_decl -> subprogram_declaration .)
    VAR             reduce using rule 13 (block_decl -> subprogram_declaration .)
    PROCEDURE       reduce using rule 13 (block_decl -> subprogram_declaration .)
    FUNCTION        reduce using rule 13 (block_decl -> subprogram_declaration .)


state 22

    (15) label_section -> LABEL . label_id_list SEMICOLON
    (16) label_id_list -> . label_id_list COMMA ID
    (17) label_id_list -> . ID

    ID              shift and go to state 70

    label_id_list                  shift and go to state 69

state 23

    (18) const_section -> CONST . const_declaration_list
    (19) const_declaration_list -> . const_declaration_list const_declaration
    (20) const_declaration_list -> . const_declaration
    (21) const_declaration -> . ID EQ const_expr SEMICOLON

    ID              shift and go to state 73

    const_declaration_list         shift and go to state 71
    const_declaration              shift and go to state 72

state 24

    (26) type_section -> TYPE . type_declaration_list
    (27) type_declaration_list -> . type_declaration_list type_declaration
    (28) type_declaration_list -> . type_declaration
    (29) type_declaration -> . ID EQ type_def SEMICOLON

    ID              shift and go to state 76

    type_declaration_list          shift and go to state 74
    type_declaration               shift and go to state 75

state 25

    (84) var_section -> VAR . var_declaration_list
    (85) var_declaration_list -> . var_declaration_list var_declaration
    (86) var_declaration_list -> . var_declaration
    (87) var_declaration -> . id_list COLON type_def SEMICOLON
    (88) id_list -> . id_list COMMA ID
    (89) id_list -> . ID

    ID              shift and go to state 80

    var_declaration_list           shift and go to state 77
    var_declaration                shift and go to state 78
    id_list                        shift and go to state 79

state 26

    (90) subprogram_declaration -> procedure_declaration .

    BEGIN           reduce using rule 90 (subprogram_declaration -> procedure_declaration .)
    LABEL           reduce using rule 90 (subprogram_declaration -> procedure_declaration .)
    CONST           reduce using rule 90 (subprogram_declaration -> procedure_declaration .)
    TYPE            reduce using rule 90 (subprogram_declaration -> procedure_declaration .)
    VAR             reduce using rule 90 (subprogram_declaration -> procedure_declaration .)
    PROCEDURE       reduce using rule 90 (subprogram_declaration -> procedure_declaration .)
    FUNCTION        reduce using rule 90 (subprogram_declaration -> procedure_declaration .)


state 27

    (91) subprogram_declaration -> function_declaration .

    BEGIN           reduce using rule 91 (subprogram_declaration -> function_declaration .)
    LABEL           reduce using rule 91 (subprogram_declaration -> function_declaration .)
    CONST           reduce using rule 91 (subprogram_declaration -> function_declaration .)
    TYPE            reduce using rule 91 (subprogram_declaration -> function_declaration .)
    VAR             reduce using rule 91 (subprogram_declaration -> function_declaration .)
    PROCEDURE       reduce using rule 91 (subprogram_declaration -> function_declaration .)
    FUNCTION        reduce using rule 91 (subprogram_declaration -> function_declaration .)


state 28

    (92) procedure_declaration -> PROCEDURE . ID LPAREN param_list RPAREN SEMICOLON proc_body SEMICOLON
    (93) procedure_declaration -> PROCEDURE . ID SEMICOLON proc_body SEMICOLON

    ID              shift and go to state 81


state 29

    (96) function_declaration -> FUNCTION . ID LPAREN param_list RPAREN COLON type_specifier SEMICOLON func_body SEMICOLON
    (97) function_declaration -> FUNCTION . ID COLON type_specifier SEMICOLON func_body SEMICOLON

    ID              shift and go to state 82


state 30

    (2) uses_section -> USES uses_id_list SEMICOLON .
